@@ -1710,11 +1710,10 @@ ags_play_dssi_audio_run_alloc_input_callback(AgsDelayAudioRun *delay_audio_run,
 					 note);
       g_object_ref(note);
     }else if(notation_counter != 0 &&
-	     (note_x1 == notation_counter ||
-	      note_x1 == notation_counter - 1)){
+	     note_x1 == notation_counter){
       //feed
-    }else if(notation_counter > 1 &&
-	     note_x1 == notation_counter - 2){
+    }else if(notation_counter > 0 &&
+	     note_x1 == notation_counter - 1){
       start_remove_note = g_list_prepend(start_remove_note,
 					 note);
       g_object_ref(note);
