@@ -3,6 +3,7 @@ ags (2.1.54)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed ags_simple_file_read_config() to modify AgsThread:max-precision and main loops frequency
 	* fixed AgsThread:max-precision property specification
+	* fixed wrong warning during ags_recall_dependency_resolve()
 
 ags (2.1.53)
 
